# advent-of-code-2023

./: Cargo.toml  README.md
day1/: Cargo.toml  test-input2.txt
day1/src/: main.rs
day10/: Cargo.toml
day10/src/: main.rs
day11/: Cargo.toml  test-input2.txt
day11/src/: main.rs
day12/: Cargo.toml
day12/src/: main.rs
day12b/: Cargo.toml
day12b/src/: main.rs
day13/: Cargo.toml  scratch.txt  test-input2.txt
day13/src/: main.rs
day14/: Cargo.toml
day14/src/: main.rs
day15/: Cargo.toml
day15/src/: main.rs
day16/: Cargo.toml
day16/src/: main.rs
day17/: Cargo.toml
day17/src/: main.rs
day18/: Cargo.toml  test-input2.txt
day18/src/: main.rs
day19/: Cargo.toml
day19/src/: main.rs
day2/: Cargo.toml
day2/src/: main.rs
day20/: Cargo.toml
day20/src/: main.rs
day20b/: Cargo.toml
day20b/src/: main.rs
day21/: Cargo.toml
day21/src/: main.rs
day22/: Cargo.toml  test-input.txt
day22/src/: main.rs
day23/: Cargo.toml
day23/src/: main.rs
day23b/: Cargo.toml
day23b/src/: main.rs
day24/: Cargo.toml
day24/src/: main.rs
day24b/: Cargo.toml
day24b/src/: main.rs
day25/: Cargo.toml  output.txt
day25/src/: main.rs
day25b/: Cargo.toml
day25b/src/: main.rs
day3/: Cargo.toml
day3/src/: main.rs
day4/: Cargo.toml
day4/src/: main.rs
day5/: Cargo.toml
day5/src/: main.rs
day6/: Cargo.toml
day7/: Cargo.toml
day8/: Cargo.toml
day9/: Cargo.toml
processor/: Cargo.toml  test-input.txt
semgrep/: Cargo.toml
template/: Cargo.toml
test-bin/: Cargo.toml  input.txt
test-bin2/: Cargo.toml  input.txt
(+8 files in other folders)
