[package]
name = "day10"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
once_cell = "1"
processor = { path = "../processor" }
regex = "1"
strum = "0"
strum_macros = "0"
substring = "1"
